2018-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/anytime-introduction.Rmd: Updated and extended

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch Travis CI to R 3.5 repo

2018-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/allFormats.R: Do not test on Solaris
	* tests/bulkTest.R: Idem
	* tests/simpleTests.R: Idem

	* vignettes/anytime-introduction.Rmd: Vignette setup tweaks
	* cleanup: Idem
	* DESCRIPTION: Add VignetteBuilder: fields

2018-08-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (r_stringToTime, anytime_cpp): Two uses each of
	Rcpp::Shield<> to make rchk happy

2018-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: Added tests for anydate from POSIXt

	* R/assertions.R: Add '#nocov' tags

2018-08-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/anytime-introduction.Rmd: More content

2018-07-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/anytime-introduction.Rmd: Initial commit
	* DESCRIPTION (Suggests): Added 'knitr, rmarkdown, pinp'
	* .travis.yml (install): Also install r-cran-pinp and its imports

2018-07-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1

2017-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* tests/simpleTests.R: Additional test for yyyymmdd()

2017-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/formats.R: Added yyyymmdd() converter even though it
	represents a truly terrible format
	* man/iso8601.Rd: Added documentation

2017-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: Additional test for anydate from integer

2017-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* NAMESPACE: Export assertDate and assertTime

	* tests/assertions.R: Added simple tests

2017-10-07  Dirk Eddelbuettel  <edd@debian.org>
