@@ -8,3 +8,7 @@
 ^LICENSE$
 ^.editorconfig$
 .*\.tar\.gz$
+^GPATH
+^GRTAGS
+^GTAGS
+^docker
