@@ -1,3 +1,12 @@
+2018-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): New minor version
+
+	* tests/simpleTests.R: Disable some tests on Windows
+
+	* src/anytime.cpp (ptToDouble): Small Windows refinement for DST
+	adjustment
+
 2018-11-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
